--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     <string name="cm_ok">OK</string>
     <string name="cm_later">Later</string>
-    <string name="cm_km">km</string>
-    <string name="cm_kmph">km/h</string>
+    <string name="cm_format_km">%.2f km</string>
+    <string name="cm_format_kmph">%.2f km/h</string>
 
     <!-- Session -->
     <string name="session_distance">Distance</string>
